Userinput controls overhaul!

--- a/Runtime/Scripts/SMARCMain.asmdef
+++ b/Runtime/Scripts/SMARCMain.asmdef
@@ -9,7 +9,8 @@
         "Unity.Robotics.ROSTCPConnector.Messages",
         "Unity.Robotics.ROSTCPConnector.MessageGeneration",
         "Unity.Robotics.UrdfImporter",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
